# msinsight_agent

./: .gitignore  CLAUDE.md  README.md  run_test_with_print.py  test_mcp.py
agent-service/: README.md  pyproject.toml  requirements.txt  verify_flow.py
agent-service/config/: config.yaml  flows.yaml
agent-service/knowledge/docs/: README.md
agent-service/sessions/: sessions.db
agent-service/src/: __init__.py  main.py
agent-service/src/adapters/: __init__.py  mcp_gateway.py  mcp_response_parser.py  rag_client.py
agent-service/src/api/: sse.py  websocket.py
agent-service/src/case_lib/: __init__.py  manager.py
agent-service/src/core/: __init__.py  agent_controller.py  agent_controller_v2.py  dialog_manager.py  error_handler.py  execution_planner.py  intent_recognizer.py  intent_router.py  interaction_policy.py  mcp_llm_assistant.py  orchestrator.py  report_generator.py  state_machine.py  tool_orchestrator.py
agent-service/src/error_handling/: __init__.py  circuit_breaker.py  fallback.py  handler.py  retry.py
agent-service/src/knowledge/: __init__.py  document_processor.py  retriever.py  vector_store.py
agent-service/src/llm/: __init__.py  base.py  claude_adapter.py  llm_router.py  (+2 more)
agent-service/tests/: conftest.py  test_agent_controller.py  test_dag_engine.py  test_dynamic_mcp_orchestration.py  test_error_handling.py  test_guided_agent_enhancement.py  test_intent_recognizer.py  test_mcp_llm_assistant.py  test_mcp_structured_control_flow.py  test_mcp_transports.py  test_orchestrator_llm_assistance.py  test_session_store.py  test_state_machine.py
(+102 files in other folders)
