[project]
name = "agent-service"
version = "0.1.0"
description = "AI Profiling MCP Agent Service"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
